Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13845

locator does not work in second window

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 3.5.0-beta1
    • Qt Creator 3.3.0, Qt Creator 3.3.1, Qt Creator 3.4.0-beta1
    • All Other Issues
    • None
    • Ubuntu 14.04
      Gnome Desktop

      Hi,

      Tested on:
      OS: Ubuntu 14.04 with the gnome display manager
      Branches: 3.3 and master
      reproduce:

      • open a new qtcreator window using the + on the top right
      • press ctrl-k to activate the locator
      • the locator is not activated. when starting typeing you're typing in the editor instead.

      note: when using the i3 window manager on the same system this behaviour is non-existent.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dt Daniel Teske
            lucvlaming Luc Vlaming
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes