AppMainWindow::raise: Use Qt's activateWindow

The work around doesn't seem to be needed anymore. The case that
is described is a Creator hitting a breakpoint, but not being raised.
This works for me on both gnome and kde with this workaround removed.

Removing the workaround also fixes:

Task-number: QTCREATORBUG-13845
Change-Id: I4f751c701a17ee39679b951b9cf7d52a68552d9f
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>